--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "http://people.eecs.ku.edu/~s383u895"
+baseURL = "http://people.ku.edu/~s383u895"
 languageCode = "en-us"
 title = "Sagindyk Urazayev"
 theme = "hugo-theme-nix"
