--- a/config.toml
+++ b/config.toml
@@ -8,7 +8,7 @@ Name = "Sagindyk Urazayev"
 HeaderUsername = "s383u895"
 HeaderHostname = "people.ku.edu"
 GnuPGFingerprint = "CCE2E27DAC465AC163013F1161BB674C628BB45B"
-About = "GIT d+ s+:- a? C++ UL++ P L+++ E+ W++ N o K- w+ O- M- V- PS PE+ Y+ PGP++ t- 5 X R+ tv++ b+++ DI D+ G++ e* h-- !r !y"
+About = "GCS d s:-- a--- C++ UL++ P+ L+++ E+ W++ N++ o K w O M- V- PS+ PE+ Y+ PGP+ t- 5+ X R !tv b+++ DI D+ G++ e++ h-- !r y"
 ProfilePicture = "me.png"
 Email = "thecsw@ku.edu"
 Mobile = "+1-785-917-8451"
